--- a/quotegenerator.css
+++ b/quotegenerator.css
@@ -3,5 +3,16 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    background-size: cover;
+    height: 100%;
     font-size: 20px;
+    color: black;
   }
+
+div {
+    background-color: rgba(220,220,220,0.6);
+}
+
+p {
+    display: inline-block;
+}
